--- a/scss/_contact.scss
+++ b/scss/_contact.scss
@@ -4,6 +4,7 @@ section#contact {
   background-image: url('../img/ajk-bg/contact-bg.png');
   background-repeat: no-repeat;
   background-position: center;
+  background-size: cover;
   .section-heading {
     color: $white;
   }
