--- a/scss/_navbar.scss
+++ b/scss/_navbar.scss
@@ -1,6 +1,16 @@
 // Styling for the navbar
 #mainNav {
-  background-color: $black-ajk;
+  background-color: $red-mauve-ajk;
+  @include mediaQuery(tablet-desktop) {
+    padding-top: 25px;
+    padding-bottom: 25px;
+    -webkit-transition: padding-top 0.3s,
+    padding-bottom 0.3s;
+    transition: padding-top 0.3s,
+    padding-bottom 0.3s;
+    border: none;
+    background-color: transparent;
+  }
   .navbar-toggler {
     font-size: 12px;
     right: 0;
@@ -9,8 +19,7 @@
     color: white;
     border: 0;
     background-color: $orange-ajk;
-    font-family: 'Caviar Dreams', Arial, Helvetica, sans-serif;
-    //@include heading-font;
+    @include caviar-dream-font;
   }
   .navbar-brand {
     color: $orange-ajk;
@@ -21,12 +30,22 @@
       color: darken($yellow-ajk, 10%);
     }
 
+    @include mediaQuery(tablet-desktop) {
+      -webkit-transition: all 0.3s;
+      transition: all 0.3s;
+    }
+
     &.logo-ajk {
       text-indent: -9999px;
       width: 80px;
       height: 80px;
       background: url('../img/logos/logo-final-ajk.svg') no-repeat top left;
       background-size: contain;
+
+      @include mediaQuery(tablet-desktop) {
+        width: 150px;
+        height: 150px;
+      }
     }
   }
   .navbar-nav {
@@ -39,82 +58,46 @@
         font-weight: 600;
         letter-spacing: 1px;
         color: white;
-        font-family: 'Caviar Dreams', Arial, Helvetica, sans-serif;
-        // @include heading-font;
+        @include caviar-dream-font;
+
         &.active,
         &:hover {
           color: $yellow-ajk;
         }
-      }
-    }
-  }
-}
 
-@include mediaQuery(tablet-desktop) {
-  #mainNav {
-    padding-top: 25px;
-    padding-bottom: 25px;
-    -webkit-transition: padding-top 0.3s, padding-bottom 0.3s;
-    transition: padding-top 0.3s, padding-bottom 0.3s;
-    border: none;
-    background-color: transparent;
-    .navbar-brand {
-      -webkit-transition: all 0.3s;
-      transition: all 0.3s;
-      &.logo-ajk {
-        width: 150px;
-        height: 150px;
-      }
-    }
-    .navbar-nav {
-      .nav-item {
-        .nav-link {
+        @include mediaQuery(tablet-desktop) {
           color:$gray-800;
           padding: 1.1em 1em !important;
         }
-      }
-    }
-    &.navbar-shrink {
-      padding: .5em;
-      background-color: $red-mauve-ajk;
-      box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2),
-      0 6px 20px 0 rgba(0, 0, 0, 0.19);
-      .navbar-brand {
-        &.logo-ajk {
-          width: 60px;
-          height: 60px;
+
+        @include mediaQuery(desktop) {
+          font-size: 75%;
+        }
+
+        @include mediaQuery(desktop-wide) {
+          font-size: 85%;
         }
       }
     }
   }
-}
+  &.navbar-shrink {
+    padding: .5em;
+    background-color: $red-mauve-ajk;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2),
+    0 6px 20px 0 rgba(0, 0, 0, 0.19);
 
-@include mediaQuery(desktop) {
-  #mainNav {
     .navbar-nav {
       .nav-item {
         .nav-link {
-          font-size: 75%;
+          color: $white;
         }
       }
     }
-    &.navbar-shrink {
-      .navbar-nav {
-        .nav-item {
-          .nav-link {
-            color: $white;
-          }
-        }
-      }
-    }
-  }
-}
 
-@include mediaQuery(desktop-wide) {
-  #mainNav {
-    .navbar-nav {
-      .nav-item {
-        .nav-link { font-size: 85%; }
+    .navbar-brand {
+      &.logo-ajk {
+        width: 60px;
+        height: 60px;
       }
     }
   }
