[AJK-009] chores: updates files & some fix

--- a/scss/agency.scss
+++ b/scss/agency.scss
@@ -17,4 +17,6 @@
 @import "team.scss";
 @import "project.scss";
 @import "contact.scss";
+@import "node_modules/@glidejs/glide/src/assets/sass/glide.core";
+@import "node_modules/@glidejs/glide/src/assets/sass/glide.theme";
 @import "footer.scss";
