feat: add css sass icons images build

--- a/src/assets/scss/_masthead.scss
+++ b/src/assets/scss/_masthead.scss
@@ -2,7 +2,7 @@
 header.masthead {
   text-align: center;
   color: white;
-  background: url('../img/ajk-bg/ajk-bg-1.png') no-repeat scroll center center;
+  background: url('../images/ajk-bg/ajk-bg-1.png') no-repeat scroll center center;
   height: 100vh;
   @include background-cover;
 
