--- a/src/assets/scss/_contact.scss
+++ b/src/assets/scss/_contact.scss
@@ -1,7 +1,7 @@
 // Styling for the contact section
 section#contact {
   background-color: $gray-900;
-  background-image: url('../img/ajk-bg/contact-bg.png');
+  background-image: url('../images/ajk-bg/contact-bg.png');
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
