--- a/src/assets/scss/_project.scss
+++ b/src/assets/scss/_project.scss
@@ -4,8 +4,19 @@
     }
 
     .glide__slide {
+
+        filter: blur(6px);
+        opacity: .7;
+        transition: .3s linear;
+
         img {
             width: 100%;
+        }
+
+        &--active {
+            opacity: 1;
+            filter: none;
+            transform: scale(1.1);
         }
     }
 }
