feat: add parrallax system

--- a/src/assets/scss/_contact.scss
+++ b/src/assets/scss/_contact.scss
@@ -1,5 +1,5 @@
 // Styling for the contact section
-section#contact {
+.contactForm {
   background-color: $gray-900;
   background-image: url('../images/ajk-bg/contact-bg.png');
   background-repeat: no-repeat;
