--- a/src/assets/scss/_global.scss
+++ b/src/assets/scss/_global.scss
@@ -173,8 +173,8 @@ img {
   }
 }
 
-.shadow {
-  box-shadow: 0 4px 8px 0 rgba(0,0,0,.2),0 6px 20px 0 rgba(0,0,0,.19);
+.boxShadow {
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,.2),0 6px 20px 0 rgba(0,0,0,.0);
 }
 
 strong {
@@ -190,5 +190,15 @@ footer {
   @include mediaQuery(tablet) {
     border-radius: 50%;
   }
+}
+
+.lazyload,
+.lazyloading {
+  opacity: 0;
+}
+
+.lazyloaded {
+  opacity: 1;
+  transition: opacity 300ms;
 }
 
