--- a/src/assets/scss/agency.scss
+++ b/src/assets/scss/agency.scss
@@ -8,6 +8,7 @@
 // Components
 @import "navbar.scss";
 @import "masthead.scss";
+@import "parralax.scss";
 @import "medias.scss";
 @import "services.scss";
 @import "portfolio.scss";
